# furusato

./: .gitignore  README.md  advanced.py  advancedanalysis.py  baseanalysis.py  basic.py  calculator.py  ckzeffect.py  data.py  donationsmap.py  foliummaps.py  matplotlibmaps.py  profitmap.py  profitvsindex.py  setup.cfg  setup.py  sim.py  singleprefviews.py
advanced/: donations_vs_strength.html  donations_vs_strength_pref.html  population_vs_profitperperson.html  profit_vs_pop.html  profit_vs_popchange.html  profit_vs_strength_pref.html  profitperperson_vs_strength_pref.html
advancedgraphics/: donations_vs_strength.html  donations_vs_strength_pref.html  population_vs_profitperperson.html  profit_vs_pop.html  profit_vs_popchange.html  profit_vs_strength.html  profit_vs_strength_pref.html  profitperperson_vs_strength_pref.html
analysis/: advanced.py  basic.py  matplotlibmaps.py
analysis/advanced/: donations_vs_strength.html  population_vs_profitperperson.html  profitperperson_vs_strength_pref.html
analysis/calculator/: calculator.xlsx  calculator_edit.xlsx
basicgraphics/: profit_vs_donation.html
calculator/: calculator.py  calculator_edit.xlsx
ckzeffect/: ckz-profit-vs-deductions.html  debt-scaling-ckz.html  scaling-factors-muni.html  special-debt.html  table.xlsx
foliummaps/: profit_prefecture_map.html  profitperperson_prefecture_map.html
furusato/: __init__.py  data.py  sim.py
profitmap/: population_vs_profitperperson.html  profit_prefecture_map.html  profitperperson_prefecture_map.html
profitvsindex/: profitperperson_vs_strength_pref.html
(+225 files in other folders)
