[metadata]
name = furusato
version = 0.0.1
author = Sam Passaglia
description = Furusato nouzei data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/passaglia/furusato
project_urls =
    Bug Tracker = https://github.com/passaglia/furusato/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License:: OSI Approved :: MIT License

[options]
packages = 
    furusato
    furusato.clean
python_requires = >=3.6
install_requires = 
    japandata
    samplotlib
    pandas
    geopandas
    matplotlib
    numpy

include_package_data = True

